# chorus

./: .env.example  .gitignore  .lintstagedrc.json  .prettierrc.js  AI_ARCHITECTURE.md  API_SPEC.md  BLOCKCHAIN_ARCHITECTURE.md  CODING_STANDARDS.md  COMPONENT_ARCHITECTURE.md  CONTRIBUTING.md  DATABASE_DESIGN.md  DESIGN_SYSTEM.md  DEVELOPMENT_ROADMAP.md  FEATURE_SPECIFICATION.md  FRONTEND_GUIDELINES.md  GITHUB_WORKFLOW.md  PRODUCT_SPEC.md  README.md  SECURITY.md  SECURITY_MODEL.md  SYSTEM_ARCHITECTURE.md  UI_STORYBOARD.md  antigravity-playbook.md  chorus-github-project-backlog.md  chorus-midnight-strategy.md  commitlint.config.js  demo-script.md  package.json  pnpm-lock.yaml  turbo.json  vercel.json
.github/: PULL_REQUEST_TEMPLATE_PUBLIC.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: changelog-publish.yml  ci-python.yml  ci.yml  release.yml  terraform-plan.yml
apps/admin/: next.config.ts  package.json
apps/compliance/: next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/dashboard/: next.config.ts  package.json  (+2 more)
contracts/: jest.config.js  package.json  testnet-addresses.json
docs/: GENERATED_CODE_LINT_POLICY.md  PYTHON_STANDARDS.md
services/ai/: .env.example  pyproject.toml
services/ai/eval/: golden_set.jsonl  run_eval.py
services/ai/src/: graph.py  main.py
services/ai/src/agents/: ambiguity.py  compliance.py  extraction.py
services/ai/src/guardrails/: pii_filter.py
services/ai/src/prompts/: ambiguity.txt  compliance.txt  extraction.txt
services/ai/src/rag/: embed.py  retrieve.py  starter_index.faiss  starter_metadata.json
services/ai/src/rag/corpus/: ehds_subset.txt  gdpr_subset.txt  hipaa_subset.txt
services/ai/tests/guardrails/: test_pii_filter.py
(+269 files in other folders)
