[project]
name = "chorus-ai"
version = "0.0.1"
description = "services/ai — Python/FastAPI AI copilot service. Source: SYSTEM_ARCHITECTURE.md, AI_ARCHITECTURE.md."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.31.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.9",
    "mypy>=1.11.2",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.2",  # for TestClient
]

# ── Ruff (linter + formatter) ────────────────────────────────────────────────
# Source: chorus-github-project-backlog.md — "ruff+mypy config"
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ANN", # flake8-annotations (type hints required)
    "S",   # bandit (security)
    "TCH", # type-checking block imports
]
ignore = [
    "ANN101",  # 'self' annotation not required
    "ANN102",  # 'cls' annotation not required
]

[tool.ruff.lint.isort]
known-first-party = ["chorus_ai"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Mypy (strict type checking) ───────────────────────────────────────────────
# Source: CODING_STANDARDS.md: TypeScript strict mode — same discipline in Python via mypy
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
no_implicit_reexport = true
show_error_codes = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
